--- a/source/composer.json
+++ b/source/composer.json
@@ -39,7 +39,8 @@
   },
   "autoload": {
     "psr-4": {
-      "app\\": "application"
+      "app\\": "application",
+      "Lop\\LopOpensdkPhp\\": "application/common/library/Jdl/lop-opensdk-php/src/"
     }
   },
   "extra": {
